--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eventemitter3": "2.0.3",
     "request-promise": "4.2.2",
     "tmi.js": "1.2.1"
+  },
+  "devDependencies": {
+    "eslint": "4.11.0"
   }
 }
