--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "tmi.js": "1.2.1"
   },
   "devDependencies": {
-    "eslint": "4.11.0"
+    "chai": "4.1.2",
+    "eslint": "4.11.0",
+    "eslint-plugin-mocha": "4.11.0",
+    "mocha": "4.0.1"
   }
 }
