--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "eventemitter3": "2.0.3",
     "request-promise": "4.2.2",
-    "tmi.js": "1.2.1"
+    "tmi.js": "1.2.1",
+    "winston": "3.0.0-rc1"
   },
   "devDependencies": {
     "chai": "4.1.2",
