--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "main": "index.js",
   "scripts": {
+    "test": "node_modules/.bin/mocha -w"
   },
   "author": "chriteixeira",
   "license": "MIT",
