--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha -w"
+    "test": "node_modules/.bin/mocha --exit"
   },
   "author": "chriteixeira",
   "license": "MIT",
