--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
+    "esdoc": "1.1.0",
+    "esdoc-standard-plugin": "1.0.0",
     "eslint": "4.17.0",
     "eslint-plugin-mocha": "4.11.0",
     "jsdoc": "3.5.5",
