--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "twitch-toolkit",
   "version": "0.0.6",
-  "description":
-    "A set of tools to integrate with Twitch API, Twitch Chat and Twitch WebHooks.",
+  "description": "A set of tools to integrate with Twitch API, Twitch Chat and Twitch WebHooks.",
   "keywords": [
     "twitch",
     "twitch.tv",
@@ -32,17 +31,17 @@
     "url": "https://github.com/chriteixeira/twitch-toolkit/issues"
   },
   "dependencies": {
-    "eventemitter3": "2.0.3",
+    "eventemitter3": "3.1.0",
     "request-promise": "4.2.2",
     "tmi.js": "1.2.1",
     "winston": "3.0.0-rc1"
   },
   "devDependencies": {
     "chai": "4.1.2",
-    "eslint": "4.17.0",
-    "eslint-plugin-mocha": "4.11.0",
+    "eslint": "4.19.1",
+    "eslint-plugin-mocha": "5.0.0",
     "jsdoc": "3.5.5",
     "minami": "1.2.3",
-    "mocha": "3.0.0"
+    "mocha": "5.2.0"
   }
 }
