--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-  "name": "twitch-toolkit",
-  "version": "0.0.6",
-  "description": "A set of tools to integrate with Twitch API, Twitch Chat and Twitch WebHooks.",
-  "keywords": [
-    "twitch",
-    "twitch.tv",
-    "stream",
-    "chat",
-    "irc",
-    "api",
-    "helix",
-    "bot",
-    "robot",
-    "pubsub",
-    "websub",
-    "toolkit"
-  ],
-  "main": "index.js",
-  "scripts": {
-    "test": "node_modules/.bin/mocha",
-    "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
-  },
-  "author": "chriteixeira",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com:chriteixeira/twitch-toolkit.git"
-  },
-  "bugs": {
-    "url": "https://github.com/chriteixeira/twitch-toolkit/issues"
-  },
-  "dependencies": {
-    "eventemitter3": "3.1.0",
-    "request-promise": "4.2.2",
-    "tmi.js": "1.2.1",
-    "winston": "3.0.0-rc1"
-  },
-  "devDependencies": {
-    "chai": "4.1.2",
-    "eslint": "4.19.1",
-    "eslint-plugin-mocha": "5.0.0",
-    "jsdoc": "3.5.5",
-    "minami": "1.2.3",
-    "mocha": "5.2.0"
-  }
+    "name": "twitch-toolkit",
+    "version": "0.0.6",
+    "description": "A set of tools to integrate with Twitch API, Twitch Chat and Twitch WebHooks.",
+    "keywords": [
+        "twitch",
+        "twitch.tv",
+        "stream",
+        "chat",
+        "irc",
+        "api",
+        "helix",
+        "bot",
+        "robot",
+        "pubsub",
+        "websub",
+        "toolkit"
+    ],
+    "main": "index.js",
+    "scripts": {
+        "lint": "eslint \"{src,test}/**/*.js\"",
+        "test": "cross-env NODE_ENV=test mocha --reporter spec",
+        "test:coverage-report": "nyc report --reporter=text",
+        "test:coverage": "nyc npm run test",
+        "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
+    },
+    "author": "chriteixeira",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com:chriteixeira/twitch-toolkit.git"
+    },
+    "bugs": {
+        "url": "https://github.com/chriteixeira/twitch-toolkit/issues"
+    },
+    "dependencies": {
+        "eventemitter3": "3.1.0",
+        "request-promise": "4.2.2",
+        "tmi.js": "1.2.1",
+        "winston": "3.0.0-rc1"
+    },
+    "devDependencies": {
+        "chai": "4.1.2",
+        "cross-env": "5.2.0",
+        "eslint": "4.19.1",
+        "eslint-plugin-mocha": "5.0.0",
+        "jsdoc": "3.5.5",
+        "minami": "1.2.3",
+        "mocha": "5.2.0",
+        "nyc": "12.0.2"
+    }
 }
